--- a/app/src/main/res/layout/todo_list_item.xml
+++ b/app/src/main/res/layout/todo_list_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
 
         <CheckBox
+            android:id="@+id/cb_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
